# openagentpay

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  resume.sh  tsconfig.base.json
.github/workflows/: ci.yml
apps/demo-api/: package.json  tsconfig.json
apps/demo-api/src/: context.ts  handlers.ts  lambda.ts  self-contained-wallets.ts  server.ts
apps/demo-api/tests/: integration.test.ts
apps/demo-api/tests/fixtures/: mock-context.ts
apps/demo-web/: index.html  package.json  tsconfig.json
apps/demo-web/src/: ActivityLog.tsx  AiAgentTab.tsx  App.tsx  GuardrailTab.tsx  HowItWorksTab.tsx  RunDemoTab.tsx  Sidebar.tsx  SpendAnalyticsTab.tsx  WalletMatrixTab.tsx  api.ts  styles.css
docs/: COMPETITIVE-LANDSCAPE.md  GOVERNANCE.md  HASHKEY_DEMO.md  POSITIONING.md  PRESENTATION.md  QUICKSTART.md  REFERENCES.md  ROADMAP.md  STATE.md  STRATEGY.md  TALK-CHEATSHEET.md  TODO.md  WALLET-CANDIDATES.md  WALLET-SIGNUP-PLAN.md
docs/ppt/: build_full_v2_p1.py  build_full_v2_p2.py  build_notes_v2.py  build_p1.py  build_p2.py  openagentpay-talk.pptx
scripts/: binance-smoke.ts  cdp-ping.ts  check-demo.sh  coinbase-cdp-smoke.ts  hashkey-smoke.ts  l2-faucet-verify.ts  langchain-demo.ts  mint-more.ts  restore-demo.sh  smoke-e2e.ts  strands-demo.py
scripts/hashkey/: MockUSDC.sol  deploy.py  transfer-with-auth.py
